# agent-core

./: .gitignore  README.md  agent.py  agent_with_tools.py  agents.yaml  creator.py  end.py  main.py  prompts.py  pyproject.toml  utils.py  workflow_state.py
agents/: calculator_agent.py  fetcher.py  summarizer.py  summarizer_agent.py  translator_agent.py
config/: agents.yaml
src/: __init__.py
src/agents/: __init__.py  creator.py  end.py  start.py
src/templates/: __init__.py  agent.py  agent_with_tools.py  base_agent.py
src/utils/: prompts.py  utils.py
templates/: agent.py  agent_with_tools.py
